# VOREStation

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .prettierignore  .tgs.yml  .travis.yml  ATTRIBUTIONS.md  COPYING  Compile.cmd  Dockerfile  LICENSE-AGPL3.txt  LICENSE-GPL3.txt  README.md  SECURITY.md  SpacemanDMM.toml  \code\modules\mob\new_player\sprite_accessories_vr.dm  _build_dependencies.sh  _start-server.bat  _start-server.sh  alienwhitelist.txt  biome.json  custom_clothes_vr - Ярлык (2).lnk  custom_clothes_vr.dm  custom_items.txt  dependencies.sh  docker-compose.yml  examine.dm  feature freeze  flags.dm  frosty.dmi  human.dm  human_defines.dm  interactions.dm  misc.dm  package.json  polaris.dme  robolimbs_vr.dm  rust_g  (+11 more)
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  boring-cyborg.yml  code_of_conduct.md  dependabot.yml  gbp-balances.toml  gbp.toml  labeler.yml  stale.yml
SQL/: feedback_schema.sql  starter_admin_ranks.sql
bot/: FMLformatter.py  NanoTrasenBot.py  _____Readme.txt
code/: __byond_version_compat.dm  _away_mission_tests.dm  _compile_options.dm  _macros.dm  _macros_vr.dm  _map_tests.dm  _unit_tests.dm  coalesce.dm  global.dm  global_init.dm  global_vr.dm  hub.dm  names.dm  stylesheet.dm  world.dm
config/: .gitignore  admin.txt  admin_ranks.txt  admins.txt  alienwhitelist.txt  custom_items.txt  custom_sprites.txt  jobwhitelist.txt  jukebox.json  (+1 more)
verdigris/: Cargo.toml  README.md  build-linux.sh  build-windows.sh  build.rs
verdigris/src/: lib.rs  random_map.rs  verdigris.rs
(+13946 files in other folders)
