[package]
name = "verdigris"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = "full"
lto = "thin"
split-debuginfo = "packed"

[profile.dev]
debug = "full"
opt-level = 0

[dependencies]
const_format = "0.2.33"
eyre = "0.6.12"
meowtonin = { git = "https://github.com/Absolucy/meowtonin.git", branch = "oh-god-why" }
rand = "0.9.2"
rand_distr = "0.5"
rayon = "1.10.0"

[build-dependencies]
bosion = "2.0.0"
